# telemt-mgmt

./: .coveragerc  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  alembic.ini  opencode.json  pyproject.toml  shell.nix
.github/workflows/: docs-ci.yml
.opencode/: oh-my-openagent.jsonc  package.json  project.jsonc
.opencode/agents/: architect-consult.md  architecture-reviewer.md  executor.md  mentor.md  reviewer.md
.opencode/commands/: arch-review.md  prd-run.md  project-setup.md  tkt-run.md
alembic/: env.py
alembic/versions/: 001_initial.py
api/: auth.py  deps.py  main.py  schemas.py
api/routes/: __init__.py  health.py  links.py  stats.py  users.py
bot/: __main__.py  config.py  main.py
docs/: README.md
docs/architecture/: ARCH-001-telemt-mgmt.md  TEMPLATE.md
docs/backlog/: BACKLOG-001-tkt005-slowapi-contradiction.md  BACKLOG-002-environment-awareness-for-agents.md  BACKLOG-002-tkt001-readme-writezone.md  BACKLOG-003-code-review-low-findings.md  BACKLOG-003-tkt001-httpx-testing-to-respx.md  BACKLOG-004-tkt008-sed-input-validation.md  BACKLOG-005-tkt008-ufw-silent-failures.md  BACKLOG-006-tkt008-no-rollback.md  BACKLOG-007-tkt009-input-validation.md  BACKLOG-008-tls-emulation-fetch-fail.md  TEMPLATE.md
docs/drafts/: EMERGENCY_FIX_ARTEFACTS.md  architect-bootstrap-ARCH-001.md  architect-emergency-fix-bootstrap.md  architect-fix-bootstrap-ARCH-001.md  architect-tspu-bootstrap.md  researcher-tspu-detection-bootstrap.md  tspu-evasion-evaluation.md
docs/knowledge/: README.md  TELEMT_DEEP_GAPS_VERIFICATION_REPORT.md  TELEMT_DEPLOYMENT_SECURITY_MONITORING_REPORT.md  TELEMT_DEPLOY_EXPERIENCE_2026-07-04.md  TELEMT_DEPLOY_REPORT_2026-07-04.md  TELEMT_DEPLOY_REPORT_V2_2026-07-04.md  TELEMT_FAKETLS_DOMAIN_RESEARCH_2026.md  TELEMT_FAKETLS_DOMAIN_SELECTION_REPORT.md  TELEMT_GITHUB_ECOSYSTEM_CATALOG.md  TELEMT_TSPU_DETECTION_RESEARCH_V1_2026-07.md  TELEMT_TSPU_DETECTION_RESEARCH_V2_2026-07.md  TELEMT_TSPU_EVASION_PATTERNS.md
docs/prd/: PRD-001-telemt-mgmt.md  TEMPLATE.md
docs/prompts/: architect.md  business-planner.md  project-setup.md
docs/questions/: TEMPLATE.md
docs/reviews/: RV-ARCH-001-telemt-mgmt.md  (+34 more)
frontend/: .eslintrc.cjs  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json
scripts/: cloudflare-dns.sh  migrate.sh  set-models.py  validate_docs.py
telemt_proxy/: client.py  config.py  database.py  exceptions.py  hashing.py  link.py  models.py  qr.py  router.py  schemas.py
tests/: conftest.py  test_api_auth.py  test_api_links.py  test_api_stats.py  test_api_users.py  test_auth.py  test_bot.py  test_client.py  test_database.py  test_deploy_scripts.py  test_hashing.py  test_link.py  test_models.py  test_qr.py  test_router.py
(+90 files in other folders)
