[project]
name = "telemt-mgmt"
version = "0.1.1"
description = "Management layer for Telemt MTProxy: embeddable bot package, admin web panel, and infrastructure-as-code."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "telemt-mgmt contributors" }]

# ── Runtime dependencies (authorised by TKT-001 §7 Constraints) ─────────────
dependencies = [
    "fastapi>=0.110",
    "aiogram>=3.0",
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "pydantic>=2.0",
    "uvicorn>=0.27",
    "qrcode[pil]>=7.4",
    "Pillow>=10.0",
]

# ── Build system ─────────────────────────────────────────────────────────────
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["telemt_proxy", "api", "bot"]

# ── Dev dependencies (uv dependency-groups — installed by `uv sync`) ─────────
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "ruff>=0.3",
    "respx>=0.21",
]

# ── mypy: strict mode (project.jsonc commands.typecheck) ────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_error_codes = true

# ── ruff: lint rules (project.jsonc commands.lint) ──────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "PIE",  # flake8-pie
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # empty package init may have unused imports in future

# ── pytest config (project.jsonc commands.test) ─────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.coverage.run]
source = ["telemt_proxy", "api", "bot"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
